fixed x-axis scrollbar

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ nav ul li a {
 .services h1 {
     font-size: 60px;
     color: white;
-    -webkit-text-stroke: 0.5px #cd104d;
+    -webkit-text-stroke: 1px #cd104d;
 }
 
 .services img {
@@ -349,6 +349,7 @@ nav ul li a {
 .contact .contact-right .text {
     margin: 1% 2%;
     border: none;
+    outline: none;
     border-radius: 4px;
     width: 35.5rem;
     height: 8rem;
@@ -463,7 +464,7 @@ nav ul li a {
 
 @media screen and (max-width: 1024px) {
     .head-content .head-left {
-        width: 22rem;
+        width: 20rem;
     }
 
     .head-content .head-left h3 {
